--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie": "^1.0.2",
     "js-cookie": "^3.0.5",
     "next": "15.4.3",
+    "next-themes": "^0.4.6",
     "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
