--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "axios": "^1.11.0",
+    "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.535.0",
     "next": "15.4.3",
     "next-themes": "^0.4.6",
     "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.0.8"
   },
   "devDependencies": {
